SL-8 Integrate OpenApi and fix CORS issues
